--- a/branches/slurm-0-3-switch-plugin-ROOT/src/slurmd/Makefile.am
+++ b/branches/slurm-0-3-switch-plugin-ROOT/src/slurmd/Makefile.am
@@ -8,7 +8,7 @@ sbin_PROGRAMS = slurmd
 
 INCLUDES = -I$(top_srcdir) $(SSL_CPPFLAGS)
 
-if WITH_ELAN
+if HAVE_ELAN
 interconnect_sources = elan_interconnect.c elanhosts.c elanhosts.h
 else
 interconnect_sources = no_interconnect.c
