--- a/branches/slurm-0-3-switch-plugin-ROOT/etc/slurm.conf.example
+++ b/branches/slurm-0-3-switch-plugin-ROOT/etc/slurm.conf.example
@@ -136,6 +136,17 @@
 #
 # AuthType=auth/none
 
+#
+# o Define the switch or interconnect in use.
+#
+# "SwitchType"		: the type of switch or interconnect.
+#	"switch/none"	: the default, supports all switches not requiring
+#			  special set-up for job launch including Myrinet, 
+#			  Ethernet, and InfiniBand.
+#	"switch/elan"	: Quadrics Elan 3 or Elan 4 interconnect.
+#
+# SwitchType=switch/none
+
 
 #
 # o Define a scheduler.
@@ -167,7 +178,7 @@
 
 
 #
-# o Defile location where job completion logs are to be written
+# o Define location where job completion logs are to be written
 #   Interpretation of the parameter is dependent upon the logging 
 #   mechanism used (specified by the JobCompType parameter). For
 #   "JobCompType=jobcomp/filetxt" the value of JobCompLoc should 
