--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -409,6 +409,7 @@ typedef struct slurm_ctl_conf {
 	uint32_t slurmd_port;	/* default communications port to slurmd */
 	char *slurmd_spooldir;	/* where slurmd put temporary state info */
 	char *slurmd_pidfile;   /* where to put slurmd pidfile           */
+	char *switch_type;	/* switch or interconnect type */
 	uint16_t slurmd_timeout;/* how long slurmctld waits for slurmd before 
 				 * considering node DOWN */
 	char *slurm_conf;	/* pathname of slurm config file */
