--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -167,7 +167,7 @@
 
 
 #
-# o Defile location where job completion logs are to be written
+# o Define location where job completion logs are to be written
 #   Interpretation of the parameter is dependent upon the logging 
 #   mechanism used (specified by the JobCompType parameter). For
 #   "JobCompType=jobcomp/filetxt" the value of JobCompLoc should 
