--- a/trunk/src/slurmd/Makefile.am
+++ b/trunk/src/slurmd/Makefile.am
@@ -8,12 +8,6 @@ sbin_PROGRAMS = slurmd
 
 INCLUDES = -I$(top_srcdir) $(SSL_CPPFLAGS)
 
-if WITH_ELAN
-interconnect_sources = elan_interconnect.c 
-else
-interconnect_sources = no_interconnect.c
-endif
-
 slurmd_LDADD = 					   \
         $(top_builddir)/src/common/libcommon.la    \
 	$(top_builddir)/src/common/libdaemonize.la \
@@ -21,7 +15,7 @@ slurmd_LDADD = 					   \
 	$(SSL_LIBS) 
 
 
-common_sources = 	        	\
+slurmd_SOURCES = 	        	\
 	slurmd.c slurmd.h       	\
 	req.c req.h			\
 	mgr.c mgr.h			\
@@ -35,17 +29,9 @@ common_sources = 	        	\
 	shm.c shm.h			\
 	fname.c fname.h			\
 	ulimits.c ulimits.h     	\
-	setenvpf.c setenvpf.h   	\
-	setproctitle.c setproctitle.h 	\
-	interconnect.h
-
-slurmd_SOURCES = $(common_sources) $(interconnect_sources)
+	setproctitle.c setproctitle.h
 
 slurmd_LDFLAGS = -export-dynamic
-
-EXTRA_slurmd_SOURCES = \
-	no_interconnect.c 	\
-	elan_interconnect.c	
 
 force:
 $(slurmd_LDADD) : force
