Added a bunch of html documents and performed updates to remaining docs. Remove Futurama copyright pictures of SLURM from index.html. Additional level of document hierarchy added for clarity.

--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -6,15 +6,26 @@ htmldir = ${prefix}/share/doc/@PACKAGE@-@VERSION@/html
 
 html_DATA = \
 	html/arch.png \
+	html/authplugins.html \
+	html/CW.2003.pdf \
+	html/documentation.html \
+	html/download.html \
 	html/entities.png \
-	html/quickstart.html
+	html/faq.html \
+	html/help.html \
+	html/index.html \
+	html/news.html \
+	html/overview.html \
+	html/platforms.html \
+	html/plugins.html \
+	html/programmer.guide.html \
+	html/publications.html \
+	html/quickstart.admin.html \
+	html/quickstart.html \
+	html/slurm_design.pdf \
+	html/team.html
 
 EXTRA_DIST = \
-	html/programmer.guide.html \
-	html/plugins.html \
-	html/authplugins.html \
-	html/slurm.png \
-	html/slurm_overview.html \
 	pubdesign/Makefile \
 	pubdesign/report.tex \
 	pubdesign/sample.config \
