o fix generation of libslurm.sym in src/api/Makefile.am  o change make_time_str to slurm_make_time_str in libslurm for    consistency and safety.  o update references to make_time_str to slurm_make_time_str

--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -52,7 +52,7 @@ libslurm_la_DEPENDENCIES   = libslurm.sym $(common_dir)/libcommon.la
 
 
 libslurm.sym : $(top_builddir)/slurm/slurm.h 
-	sed -n 's/^extern.* \(slurm[^ ]*\).*$$/\1/p' $< >libslurm.sym
+	sed -n 's/^extern.* \(slurm[a-zA-Z0-9_]*\).*$$/\1/p' $< >libslurm.sym
 
 distclean-local: 
 	-rm libslurm.sym
