--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -607,7 +607,7 @@ extern int slurm_complete_job_step PARAMS((
  * IN time - a time stamp
  * OUT string - pointer user defined buffer
  */
-extern void make_time_str PARAMS((time_t *time, char *string));
+extern void slurm_make_time_str PARAMS((time_t *time, char *string));
 
 /*
  * slurm_load_ctl_conf - issue RPC to get slurm control configuration  
@@ -820,7 +820,7 @@ extern int slurm_update_node PARAMS(( update_node_msg_t * node_msg ));
  *	default values 
  * OUT job_desc_msg - user defined partition descriptor
  */
-void slurm_init_part_desc_msg PARAMS((update_part_msg_t * update_part_msg ));
+extern void slurm_init_part_desc_msg PARAMS((update_part_msg_t * update_part_msg ));
 
 /*
  * slurm_load_partitions - issue RPC to get slurm all partition configuration  
