Assorted definition and configuration changes to support AIX: alloca() has been replace by malloc() and free(), Use of __progname eliminated, GNU compliant malloc() wrapper added, RLIMIT_* definition use controlled by #ifdef's, Changed some data types, and conditionally added some #includes.

--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -41,7 +41,7 @@ dnl
 AC_CHECK_HEADERS(mcheck.h values.h socket.h sys/socket.h  \
                  stdbool.h sys/ipc.h sys/shm.h sys/sem.h errno.h \
                  stdlib.h dirent.h pthread.h sys/prctl.h \
-                 sysint.h inttypes.h termcap.h  \
+                 sysint.h inttypes.h termcap.h netdb.h sys/socket.h  \
 		 )
 AC_HEADER_SYS_WAIT
 AC_HEADER_TIME
