--- a/trunk/src/api/Makefile.am
+++ b/trunk/src/api/Makefile.am
@@ -51,9 +51,11 @@ libslurm_la_LDFLAGS        = -export-symbols libslurm.sym \
 
 libslurm_la_DEPENDENCIES   = libslurm.sym $(common_dir)/libcommon.la
 
-
+# WARNING: on AIX   "$*" is set, but "$<" is not
+#          on Linux "$<" is set, but "$*" is not
+#          we put both in to make it build in both places
 libslurm.sym : $(top_builddir)/slurm/slurm.h 
-	sed -n 's/^extern.* \(slurm[a-zA-Z0-9_]*\).*$$/\1/p' $< >libslurm.sym
+	sed -n 's/^extern.* \(slurm[a-zA-Z0-9_]*\).*$$/\1/p' $< $* >libslurm.sym
 
 distclean-local: 
 	-rm libslurm.sym
