--- a/trunk/src/plugins/switch/Makefile.am
+++ b/trunk/src/plugins/switch/Makefile.am
@@ -27,4 +27,11 @@ switch_elan_la_SOURCES =        \
 	qsw.c qsw.h
 switch_elan_la_LIBADD  = $(top_builddir)/src/common/libcommon.la $(ELAN_LIBS)
 switch_elan_la_LDFLAGS = $(PLUGIN_FLAGS)
+
+else
+EXTRA_switch_none_la_SOURCES =  \
+	switch_elan.c           \
+	elanhosts.c elanhosts.h \
+	qsw.c qsw.h
+
 endif
