#define SLURM version information in slurm.h Export version info via new API

--- a/trunk/doc/man/Makefile.am
+++ b/trunk/doc/man/Makefile.am
@@ -14,6 +14,7 @@ man3_MANS = man3/hostlist_create.3 \
 	man3/hostlist_shift.3 \
 	man3/slurm_allocate_resources.3 \
 	man3/slurm_allocate_resources_and_run.3 \
+	man3/slurm_api_version.3 \
 	man3/slurm_complete_job.3 \
 	man3/slurm_complete_job_step.3 \
 	man3/slurm_confirm_allocation.3 \
