--- a/trunk/slurm/slurm.h.in
+++ b/trunk/slurm/slurm.h.in
@@ -96,21 +96,17 @@ BEGIN_C_DECLS
  *      DEFINITIONS FOR VERSION MANAGEMENT
 \*****************************************************************************/
 
-#ifndef SLURM_MAJOR
-/* Define the project's major version. */
-#undef SLURM_MAJOR
-
-/* Define the project's minor version. */
-#undef SLURM_MINOR
-
-/* Define the project's micro version. */
-#undef SLURM_MICRO
-#endif
-
 #define SLURM_VERSION_NUM(a,b,c) (((a) << 16) + ((b) << 8) + (c))
 #define SLURM_VERSION_MAJOR(a)   (((a) >> 16) & 0xff)
 #define SLURM_VERSION_MINOR(a)   (((a) >>  8) & 0xff)
 #define SLURM_VERSION_MICRO(a)    ((a)        & 0xff)
+
+/* Define the API's version. Update in META as needed. 
+ * High-order byte is major version. Update when existing APIs change.
+ * Middle byte     is minor version. Update when new functions are added.
+ * Low-order byte  is micro version. Update on patches and bug fixes. */
+
+#undef SLURM_API_VERSION
 
 /*****************************************************************************\
  *	DEFINITIONS FOR INPUT VALUES
