Take-2 on switch plugin support.

--- a/trunk/slurm.spec.in
+++ b/trunk/slurm.spec.in
@@ -175,7 +175,7 @@ rm -rf $RPM_BUILD_ROOT
 #############################################################################
 
 %if %(test -f %{_libdir}/slurm/switch-elan.so && echo 1 || echo 0)
-%files auth-authd
+%files switch-elan
 %defattr(-,root,root)
 %{_libdir}/slurm/switch-elan.so
 %endif
