--- a/trunk/src/common/Makefile.am
+++ b/trunk/src/common/Makefile.am
@@ -69,7 +69,8 @@ libcommon_la_SOURCES = 			\
 	malloc.c malloc.h		\
 	$(build_getopt_src)		\
 	$(build_unsetenv_src)		\
-	hostlist.c hostlist.h
+	hostlist.c hostlist.h		\
+	xlator.h
 
 EXTRA_libcommon_la_SOURCES = 	\
 	$(extra_getopt_src)	\
