--- a/trunk/etc/slurm.conf.example
+++ b/trunk/etc/slurm.conf.example
@@ -144,18 +144,19 @@
 #
 # o Define a scheduler.
 #
-# "SchedulerType"	: the type of scheduler.
-#	"sched/builtin"	: the default, SLURM's built-in FIFO scheduler.
-#	"sched/wiki"	: the Wiki interface to Maui.
+# "SchedulerType"	 : the type of scheduler.
+#	"sched/builtin"	 : the default, SLURM's built-in FIFO scheduler.
+#	"sched/backfill" : FIFO scheduling with backfill.
+#	"sched/wiki"	 : the Wiki interface to Maui.
 #
-# "SchedulerAuth"	: an authentication token, if any, that must
-#			  be used in a scheduler communication
-#			  protocol.  The interpretation of this value
-#			  depends on the plugin type.
+# "SchedulerAuth"	 : an authentication token, if any, that must
+#			   be used in a scheduler communication
+#			   protocol.  The interpretation of this value
+#			   depends on the plugin type.
 #
-# "SchedulerPort"	: for polling schedulers, the port number on
-#			  which slurmctld should listen for connection
-#			  requests.
+# "SchedulerPort"	 : for polling schedulers, the port number on
+#			   which slurmctld should listen for connection
+#			   requests.
 #
 # SchedulerType=sched/wiki
 # SchedulerAuth=42
