--- a/trunk/doc/Makefile.am
+++ b/trunk/doc/Makefile.am
@@ -15,6 +15,7 @@ html_DATA = \
 	html/help.html \
 	html/jobcompplugins.html \
 	html/lll.gif \
+	html/maui.html \
 	html/news.html \
 	html/overview.html \
 	html/platforms.html \
