Rather than performing state saves from each pthread as needed, just flag the required state saves. Perform the saves using synchronous I/O from just one thread. Under heavy loads this results in much faster responsiveness and lowers slurmctld's memory and CPU overhead considerably.

--- a/trunk/src/slurmctld/Makefile.am
+++ b/trunk/src/slurmctld/Makefile.am
@@ -38,6 +38,8 @@ slurmctld_SOURCES = 	\
 	slurmctld.h	\
 	srun_comm.c	\
 	srun_comm.h	\
+	state_save.c	\
+	state_save.h	\
 	step_mgr.c
 
 slurmctld_LDFLAGS = -export-dynamic
