--- a/trunk/src/plugins/switch/Makefile.am
+++ b/trunk/src/plugins/switch/Makefile.am
@@ -25,7 +25,11 @@ switch_elan_la_SOURCES =        \
 	switch_elan.c		\
 	elanhosts.c elanhosts.h	\
 	qsw.c qsw.h
-switch_elan_la_LIBADD  = $(top_builddir)/src/common/libcommon.la $(ELAN_LIBS)
+
+# Add libslurm to switch_elan to provide some symbols that are not
+#  available in slurmctld (slurm_setenvpf)
+
+switch_elan_la_LIBADD  = $(ELAN_LIBS)  $(top_builddir)/src/api/libslurm.la
 switch_elan_la_LDFLAGS = $(PLUGIN_FLAGS)
 
 else
